--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,16 @@ code {
 .column-left {
     float: left;
     width: 30%;
+
+    content: "";
+    background-color: #6696f6;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .column-right {
@@ -24,12 +34,21 @@ code {
 
 /* Clear floats after the columns */
 .row:after {
-    content: ""; 
-    display: table; 
-    clear: both; 
+    content: "";
+    display: table;
+    clear: both;
 }
 
-.row--top {
+.row-top {
     height: 30%;
     content: "";
+    background-color: #2550a7;
+    min-height: 15vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
